v1.1.3 (#318)
* fix with --default for setup/config-create

* work

* support for var length columns in tables

* more

* config work

* address some minor copilot issues

* use UnaryOperator

* a